--- a/SharedDirectoryHTTPServer/makefile
+++ b/SharedDirectoryHTTPServer/makefile
@@ -1,6 +1,7 @@
 .PHONY:all
 all:
-	g++ server.cpp -o server -lpthread -std=c++0x
+	g++ http_server.cpp -o server -lpthread -std=c++0x
+	g++ upload.cpp -o upload -std=c++0x
 
 .PHONY:clean
 clean:
